--- a/src/app/analog-manage/analog-manage.component.html
+++ b/src/app/analog-manage/analog-manage.component.html
@@ -4,17 +4,22 @@
 <aside class="analog-operate">
   <i class="anticon anticon-rollback" nz-tooltip="返回" (click)="backModular($event)"></i>
 </aside>
-<nz-collapseset>
+<nz-collapseset class="analog-body">
   <nz-collapse *ngFor="let analog of data">
-    <header collapse-title>
-      <div>
-        <i>{{analog['active']}}</i>
+    <header collapse-title style="width: 100%;">
+      <span [ngSwitch]="analog['saveType']">
+        <b *ngSwitchCase="'text'">文本</b>
+        <b *ngSwitchCase="'file'">文件</b>
+      </span>
+      <span [ngSwitch]="analog['dataType']">
+        <b *ngSwitchCase="'json'">JSON</b>
+      </span>
+      <span>{{getDate(analog['createdTime'])}}</span>
+      <div class="analog-item-operate">
+        <i [class]="analog['active'] ? 'status active':'status inactive'"></i>
         <i *ngIf="interfaces.writable==='writer'" nz-tooltip="修改" class="anticon anticon-edit" (click)="modifyAnalog($event,analog)"></i>
         <i *ngIf="interfaces.writable==='writer'" nz-tooltip="删除" class="anticon anticon-delete" (click)="deleteAnalog($event,analog)"></i>
       </div>
-      <span>{{analog['saveType']}}</span>
-      <span>{{analog['dataType']}}</span>
-      <span>{{getDate(analog['createdTime'])}}</span>
     </header>
     <p>{{analog['comment']}}</p>
     <div><pre>{{analog['data']}}</pre></div>
