--- a/src/app/project-detail/project-detail.component.html
+++ b/src/app/project-detail/project-detail.component.html
@@ -5,8 +5,14 @@
         <header collapse-title class="baseinfo-header">
           <span>{{project['name']}}</span>
           <span class="baseinfo-operate">
-            <i nz-tooltip="启动" class="anticon anticon-caret-right" (click)="startAnalogService($event)"></i>
-            <i nz-tooltip="停止" class="anticon anticon-poweroff" (click)="stopAnalogService($event)"></i>
+            <i nz-tooltip="启动"
+               *ngIf="!getProjectStatus(project['account'])"
+               class="anticon anticon-caret-right"
+               (click)="startAnalogService($event)"></i>
+            <i nz-tooltip="停止"
+               *ngIf="getProjectStatus(project['account'])"
+               class="anticon anticon-poweroff"
+               (click)="stopAnalogService($event)"></i>
             <i *ngIf="project.writable==='writer'" nz-tooltip="修改" class="anticon anticon-edit" (click)="modifyProject($event)"></i>
             <i *ngIf="project.writable==='writer'" nz-tooltip="修改路径" class="anticon anticon-link" (click)="modifyProUrl($event)"></i>
             <i *ngIf="project.writable==='writer'" nz-tooltip="删除" class="anticon anticon-delete" (click)="deleteProject($event,deleteProjectContent,deleteProjectContentFooter)"></i>
