--- a/src/app/project-manage/project-manage.component.html
+++ b/src/app/project-manage/project-manage.component.html
@@ -17,8 +17,8 @@
     [tags]="p['tags']"
     [content]="p['content']"
     [data]="p"
-    [leftIcon]="'caret-right'"
-    [leftText]="'启动'"
+    [leftIcon]="getProjectStatus(p['account'])?'poweroff':'caret-right'"
+    [leftText]="getProjectStatus(p['account'])?'停止':'启动'"
     (leftClick)="changeProjectState($event)"
     (rightClick)="detailProject($event)"
   ></card>
