--- a/src/app/project-detail/project-detail.component.html
+++ b/src/app/project-detail/project-detail.component.html
@@ -5,12 +5,19 @@
         <header collapse-title class="baseinfo-header">
           <span>{{project['name']}}</span>
           <span class="baseinfo-operate">
+            <i nz-tooltip="上传"
+               *ngIf="!getRemoteStatus()"
+               class="anticon anticon-upload"></i>
+            <i nz-tooltip="下载"
+               *ngIf="getRemoteStatus()"
+               class="anticon anticon-download"
+               (click)="beginDownload($event)"></i>
             <i nz-tooltip="启动"
-               *ngIf="!getProjectStatus(project['account'])"
+               *ngIf="!getRemoteStatus()&&!getProjectStatus(project['account'])"
                class="anticon anticon-caret-right"
                (click)="startAnalogService($event)"></i>
             <i nz-tooltip="停止"
-               *ngIf="getProjectStatus(project['account'])"
+               *ngIf="!getRemoteStatus()&&getProjectStatus(project['account'])"
                class="anticon anticon-poweroff"
                (click)="stopAnalogService($event)"></i>
             <i *ngIf="project.writable==='writer'" nz-tooltip="修改" class="anticon anticon-edit" (click)="modifyProject($event)"></i>
