--- a/src/app/project-detail/project-detail.component.html
+++ b/src/app/project-detail/project-detail.component.html
@@ -7,7 +7,8 @@
           <span class="baseinfo-operate">
             <i nz-tooltip="上传"
                *ngIf="!getRemoteStatus()"
-               class="anticon anticon-upload"></i>
+               class="anticon anticon-upload"
+               (click)="beginUpload($event)"></i>
             <i nz-tooltip="下载"
                *ngIf="getRemoteStatus()"
                class="anticon anticon-download"
